--- a/app/src/main/res/layout/one_post_home_rv.xml
+++ b/app/src/main/res/layout/one_post_home_rv.xml
@@ -6,8 +6,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/White"
-        android:background="@color/White"
+        android:backgroundTint="@color/DarkBlue100"
+        android:background="@drawable/green_bg_text"
         android:layout_margin="6dp"
         android:padding="5dp">
 
@@ -15,95 +15,11 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:layout_editor_absoluteX="10dp"
-            tools:layout_editor_absoluteY="10dp">
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/post_image_from_database"
-                android:layout_width="match_parent"
-                android:layout_height="230dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/no_profile_pic"
-                app:shapeAppearanceOverlay="@style/RoundedSquare" />
-
-            <TextView
-                android:id="@+id/post_title"
-                android:layout_width="wrap_content"
-                android:layout_height="26dp"
-                android:layout_marginTop="16dp"
-                android:hint="@string/loading"
-                android:textSize="18sp"/>
-
-            <TextView
-                android:id="@+id/post_address"
-                android:layout_width="wrap_content"
-                android:hint="@string/loading"
-                android:textColor="@color/White400"
-                android:layout_height="22dp"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:orientation="horizontal">
-
-<ImageView
-    android:layout_width="18dp"
-    android:layout_height="18dp"
-    android:paddingTop="5dp"
-    android:src="@drawable/rupee"/>
-                <TextView
-                    android:id="@+id/post_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="26dp"
-                    android:layout_weight="2"
-                    android:textSize="18dp"
-                    android:hint="@string/loading" />
-
-                <TextView
-                    android:id="@+id/post_carpet_area"
-                    android:layout_width="86dp"
-                    android:layout_height="match_parent"
-                    android:padding="2dp"
-                    android:gravity="center"
-                    android:text="5200 Sqft."
-                    android:backgroundTint="@color/White100"
-                    android:background="@drawable/green_bg_text"
-                    android:textColor="@color/White300"
-                    android:hint="@string/loading" />
-
-                <TextView
-                    android:id="@+id/post_status"
-                    android:layout_width="108dp"
-                    android:layout_height="match_parent"
-                    android:padding="2dp"
-                    android:gravity="center"
-                    android:text="Semi-fernished"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="8dp"
-                    android:backgroundTint="@color/White100"
-                    android:background="@drawable/green_bg_text"
-                    android:textColor="@color/White300"
-                    android:hint="@string/loading" />
-
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:background="@color/White100" />
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginTop="10dp"
-                android:paddingTop="5dp"
-                android:backgroundTint="@color/White100"
-                android:background="@drawable/green_bg_text"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -125,8 +41,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="3"
-                        android:background="@drawable/blue_bg"
-                        android:textColor="@color/DarkBlue300"
+                        android:textColor="@color/black"
                         android:text="Anil Yadav"
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp" />
@@ -151,27 +66,93 @@
 
             </LinearLayout>
 
+
+            <ImageView
+                android:id="@+id/post_image_from_database"
+                android:layout_width="match_parent"
+                android:layout_height="230dp"
+                android:background="@color/White400"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:paddingTop="5dp"
+                    android:src="@drawable/rupee"/>
+                <TextView
+                    android:id="@+id/post_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="26dp"
+                    android:layout_weight="2"
+                    android:textSize="18dp"
+                    android:hint="@string/loading" />
+                <ImageView
+                    android:id="@+id/post_save"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/heart_outline" />
+                <ImageView
+                    android:id="@+id/post_share"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/share" />
+
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/post_title"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                android:layout_marginTop="16dp"
+                android:hint="@string/loading"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/post_address"
+                android:layout_width="wrap_content"
+                android:hint="@string/loading"
+                android:textColor="@color/White400"
+                android:layout_height="22dp"/>
+
+            <TextView
+                android:id="@+id/post_carpet_area"
+                android:layout_width="86dp"
+                android:layout_height="match_parent"
+                android:padding="2dp"
+                android:gravity="center"
+                android:text="5200 Sqft."
+                android:backgroundTint="@color/White100"
+                android:background="@drawable/green_bg_text"
+                android:textColor="@color/White300"
+                android:hint="@string/loading" />
+
+            <TextView
+                android:id="@+id/post_status"
+                android:layout_width="108dp"
+                android:layout_height="match_parent"
+                android:padding="2dp"
+                android:gravity="center"
+                android:text="Semi-fernished"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="8dp"
+                android:backgroundTint="@color/White100"
+                android:background="@drawable/green_bg_text"
+                android:textColor="@color/White300"
+                android:hint="@string/loading" />
+
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/post_share"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/share"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/post_save" />
-
-        <ImageView
-            android:id="@+id/post_save"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/heart_outline"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/post_sell_rent"
