lab6 pc 34 2nd commit

--- a/app/src/main/res/layout/one_post_home_rv.xml
+++ b/app/src/main/res/layout/one_post_home_rv.xml
@@ -39,8 +39,7 @@
                     <TextView
                         android:id="@+id/post_seller_name"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3"
+                        android:layout_height="wrap_content"
                         android:textColor="@color/black"
                         android:text="Anil Yadav"
                         android:paddingStart="8dp"
@@ -49,20 +48,28 @@
                     <TextView
                         android:id="@+id/post_seller_type"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:textColor="@color/DarkBlue400"
                         android:hint="@string/loading"/>
                 </LinearLayout>
 
-                <ImageView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/post_chat"
-                    android:layout_width="30dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
-                    android:src="@drawable/comment_dots" />
+                    android:backgroundTint="@color/DarkBlue200"
+                    app:cardCornerRadius="5dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@color/DarkBlue500"
+                        android:textStyle="bold"
+                        android:text="Request for Rent"/>
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
@@ -154,21 +161,21 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/post_sell_rent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="38dp"
-            android:layout_weight="1"
-            android:text="Sell"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:textColor="@color/Green300"
-            android:background="@drawable/green_bg_text"
-            android:fontFamily="sans-serif-condensed"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/linearLayout"
-            app:layout_constraintTop_toTopOf="@+id/linearLayout" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/post_sell_rent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="180dp"
+        android:layout_weight="1"
+        android:background="@drawable/green_bg_text"
+        android:fontFamily="sans-serif-condensed"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:text="Sell"
+        android:textColor="@color/Green300"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
